ops/frontend/virtualService.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: brain-frontend-vs
  namespace: brain-app
spec:
  hosts:
    - brain.kushan23.com
  gateways:
    - istio-system/ingress-gateway
  http:
    - match:
        - uri:
            prefix: /.well-known/acme-challenge/
      route:
        - destination:
            host: frontend
            port:
              number: 80
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: frontend
            port:
              number: 80
